     Added a function EC_KEY_generate_key similar to RSA_generate_key and a
     function EVP_PKEY_assign_EC_KEY similar to EVP_PKEY_assign_RSA. Using
     these functions it is easy to create and use EC keys in the same way as
     RSA keys. Patch provided by Steffen Ullrich. Thanks Steffen.
     Testing with LibreSSL 2.4.1, with compatibility patch from Steffen
     Ullrich. Thanks Steffen.

1.74 2016-04-12
     README.OSX was missing from the distribution

1.73 2016-04-11
     Added X509_get_X509_PUBKEY. Patch supplied by GUILHEM. Thanks.
     Added README.OSX with instructions on how to build for recent OS X.
     Added info about using OPENSSL_PREFIX to README.Win32.
     Added comments in POD about installation documentation.
     Added '/usr/local/opt/openssl/bin/openssl' to Openssl search path for
     latest version of  OSX homebrew openssl. Patch from Shoichi Kaji.

1.72 2015-09-22
     Fixed a problem where SvPVx_nolen was undefined in some versions of
     perl. Reported by Karen Etheridge. Replaced with SvPV_nolen.
     Fixed a cast warning on Darwin reported by Karen Etheridge. 

1.71 2015-09-18
     Patch from Ben Kaduk: Conditionalise support for MD4, MD5.
     Added support for linking libraries in /usr/local/lib64 for some flavours
     of Linux like RH Tikanga. 
     Fixes to X509_check_host, X509_check_ip, SSL_CTX_set_alpn_protos, and
     SSL_set_alpn_protos so they will compile on MSVC and AIX cc. Thanks to
     AGRUNDMA.
     Fixed typos in documentation for X509_NAME_new and X509_NAME_hash
     incorrect version 1.45 instead of 1.55 given.
     Version number in META.yml is now quoted per request from Satoshi Yagi.
     

1.70 2015-06-26
     Patch from Alexander Bluhm: The new OpenSSL 1.0.2 X509_check_* functions are not available in
     current LibreSSL.  So disable them in SSLeay.xs.
     Fixed a problem with building against OSX homebrew's openssl. Patch from
     Shoichi Kaji.