@@ -4182,6 +4182,76 @@ by setting pref_cipher), else it should return 0 (in which case OpenSSL will sel
 With OpenSSL 1.1 and later, callback_function can change the master key for the session by 
 altering $secret and returning 1.
 
+=item * CTX_set_tlsext_ticket_getkey_cb
+
+Setup encryption for TLS session tickets (stateless session reuse).
+
+ Net::SSLeay::CTX_set_tlsext_ticket_getkey_cb($ctx, $func, $data);
+ # $ctx  - value corresponding to openssl's SSL_CTX structure
+ # $func - perl reference to callback function
+ # $data - [optional] data that will be passed to callback function when invoked
+ #
+ # returns: no return value
+
+The callback function will be called like:
+getkey($data,[$key_name]) -> ($key,$current_key_name)
+
+# $data is the data passed to set_session_secret_cb
+# $key_name is the name of the key OpenSSL has extracted from the session ticket
+# $key is the requested key for ticket encryption + HMAC
+# $current_key_name is the name for the currently valid key
+
+OpenSSL will call the function without a key name if it generates a new ticket.
+It then needs the callback to return the encryption+HMAC key and an identifier
+(key name) for this key.
+
+When OpenSSL gets a session ticket from the client it extracts the key name and
+calls the callback with this name as argument. It then expects the callback to
+return the encryption+HMAC key matching the requested key name and and also the
+key name which should be used at the moment. If the requested key name and the
+returned key name differ it means that this session ticket was created with an
+expired key and need to be renewed. In this case OpenSSL will call the callback
+again with no key name to create a new session ticket based on the old one.
+
+The key must be at least 32 byte of random data which can be created with
+RAND_bytes. Internally the first 16 byte are used as key in AES-128 encryption
+while the next 16 byte are used for the SHA-256 HMAC.
+The key name are binary data and must be exactly 16 byte long. 
+
+Example:
+
+    Net::SSLeay::RAND_bytes(my $oldkey,32);
+    Net::SSLeay::RAND_bytes(my $newkey,32);
+    my $oldkey_name = pack("a16",'oldsecret');
+    my $newkey_name = pack("a16",'newsecret');
+
+    my @keys = (
+	[ $newkey_name, $newkey ], # current active key
+	[ $oldkey_name, $oldkey ], # already expired
+    );
+
+    Net::SSLeay::CTX_set_tlsext_ticket_getkey_cb($server2->_ctx, sub {
+	my ($mykeys,$name) = @_;
+
+	# return (current_key, current_key_name) if no name given
+	return ($mykeys->[0][1],$mykeys->[0][0]) if ! $name;
+
+	# return (matching_key, current_key_name) if we find a key matching
+	# the given name
+	for(my $i = 0; $i<@$mykeys; $i++) {
+	    next if $name ne $mykeys->[$i][0];
+	    return ($mykeys->[$i][1],$mykeys->[0][0]);
+	}
+
+	# no matching key found
+	return;
+    },\@keys);
+
+
+This function is based on the OpenSSL function SSL_CTX_set_tlsext_ticket_key_cb
+but provides a simpler to use interface. For more information see
+L<http://www.openssl.org/docs/ssl/SSL_CTX_set_tlsext_ticket_key_cb.html|http://www.openssl.org/docs/ssl/SSL_CTX_set_tlsext_ticket_key_cb.html>
+
 =item * set_shutdown
 
 Sets the shutdown state of $ssl to $mode.
